Fix Batch API